Lesson-20-RemoteState-Network-Servers/Layer2-Servers/main.tf
#----------------------------------------------------------
# My Terraform
#
# Remote State on S3
#
# Made by Dmitry Yemelin
#----------------------------------------------------------
provider "aws" {
  region = "us-east-1"
}


terraform {
  backend "s3" {
    bucket = "dmitry-yemelin-project-terraform-state" // Bucket where to SAVE Terraform State
    key    = "dev/servers/terraform.tfstate"          // Object name in the bucket to SAVE Terraform State
    region = "us-east-1"                              // Region where bycket created
  }
}

#====================================================================


data "terraform_remote_state" "network" {
  backend = "s3"
  config = {
    bucket = "dmitry-yemelin-project-terraform-state" // Bucket from where to GET Terraform State
    key    = "dev/network/terraform.tfstate"          // Object name in the bucket to GET Terraform state
    region = "us-east-1"                              // Region where bycket created
  }
}

data "aws_ami" "latest_amazon_linux" {
  owners      = ["amazon"]
  most_recent = true
  filter {
    name   = "name"
    values = ["amzn2-ami-kernel-5.10-hvm-2.*-x86_64-gp2"]
  }
}

/*
output "network_details" {
  value = data.terraform_remote_state.network
}
*/
#===============================================================


resource "aws_instance" "web_server" {
  ami                    = data.aws_ami.latest_amazon_linux.id
  instance_type          = "t3.micro"
  vpc_security_group_ids = [aws_security_group.webserver.id]
  subnet_id              = data.terraform_remote_state.network.outputs.public_subnet_ids[0]
  user_data              = <<EOF
#!/bin/bash
yum -y update
yum -y install docker
sudo groupadd docker
sudo usermod -aG docker ec2-user
newgrp docker
sudo systemctl enable docker.service
sudo systemctl enable containerd.service
sudo systemctl start docker.service
sudo systemctl start containerd.service
yum -y install httpd
myip=`curl http://169.254.169.254/latest/meta-data/local-ipv4`
echo "<h2>WebServer with IP: $myip</h2><br>Build by Terraform with Remote State"  >  /var/www/html/index.html
sudo service httpd start
chkconfig httpd on
EOF
  tags = {
    Name = "${var.env}-WebServer"
  }
}


resource "aws_security_group" "webserver" {
  name   = "WebServer Security Group"
  vpc_id = data.terraform_remote_state.network.outputs.vpc_id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0" /*data.terraform_remote_state.network.outputs.vpc_cidr*/]

  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name  = "${var.env}-web-server-sg"
    Owner = "Dmitry Yemelin"
  }
}

#=================================================================
